--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,32 @@
-.root{
-    --light-color:#ffe7ae;
+:root {
+    --light-color: #ffe6ac;
 }
-.banner{
-    background: var(--light-color) ;
+
+img,
+object {
+    max-width: 100%;
+    height: auto;
+    object-fit: cover;
+
+}
+
+.banner {
+    background: var(--light-color);
     background-image: url("../images/main-banner.jpg");
-    
+
 }
-.banner .container{
+
+.banner .container {
     background-color: rgba(0, 0, 0, 0.75);
+}
+
+.abt-us {
+    background: var(--light-color);
+
+}
+.card{
+    background: var(--light-color);
+}
+.vision{
+    background-image: url("../images/vision.jpg");
 }
